--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Platzi Music</title>
+    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"
   </head>
   <body>
     <div id="app"></div>
